--- a/.env
+++ b/.env
@@ -27,3 +27,35 @@ CRT_O=CRISvsGAME           # Organization Name (eg, company) [Internet Widgits P
 CRT_OU=CRISvsGAME          # Organizational Unit Name (eg, section) []:
 CRT_CN=CRISvsGAME          # Common Name (e.g. server FQDN or YOUR name) []:
 CRT_EM=cris@crisvsgame.com # Email Address []:
+
+# Laravel
+LARAVEL_KEYS="
+APP_NAME
+APP_URL
+DB_CONNECTION
+DB_HOST
+DB_PORT
+DB_DATABASE
+DB_USERNAME
+DB_PASSWORD
+SESSION_DRIVER
+QUEUE_CONNECTION
+CACHE_STORE
+REDIS_CLIENT
+REDIS_HOST
+"
+LARAVEL_VALS="
+$APP_NAME
+https://$APP_SERVER_NAME
+mysql
+$MYSQL_HOST
+3306
+$MYSQL_DATABASE
+$MYSQL_USER
+$MYSQL_PASS
+redis
+redis
+redis
+predis
+redis
+"
